Design: removed QV, fixed the ranking of peer-review

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -83,7 +83,7 @@ Thus, the system acts also as a reputation builder.
 \paragraph{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data \emph{immutability} and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remain unaltered and indelible. This notarization process is called Proof of Existence (PoE)and allows manual verification of the existence of the document.
 \newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s Externally Owned Accounts(EOA) addresses, zero-knowledge proofs, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see § Privacy in 3.2).
 
-\paragraph{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. \newline An interesting addition would be to introduce Quadratic Voting (QV) \cite{QVWeyl} for the reviews' evaluation. QV replaces the discrete concept of one-person-one-vote with the non-linear one of n vote at the cost of $n^2$ and is optimal in the context of multiple choices. If we consider scientific outputs as public goods, then the community can vote (with voting tokens) 'how much they care' for a specific peer-review. A rank of peer-reviews would result from the voting process, with a more fine-graded distribution that might reflect issues that have a high value to few people and low value to more people. \newline Finally, it's conceivable that the members of the community participate to the share of the tokens by voting to the best peer-reviews. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
+\paragraph{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1  Future developments). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
 
 \subsection{Implementation}
 
@@ -151,8 +151,8 @@ A Decentralized Autonomous Organization (DAO) could be formed in the future to a
 
 \subsection{A new community-driven standard?}
 As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value (\emph{ibidem}).
-In our proposal we decoupled the peer-review process from the publishers giving it back to the scientific community and applying concepts from mechanism design. We foresee that the future will evolve towards community-organized peer reviews: peer reviews will be more and more independent from publishers, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
-\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process might require a new standard for peer reviews: for example some aspects might be taken over by AI assistants leaving to the reviewers the sole task of evaluating the content of a paper (such as \emph{AIRA} \cite{}). Building smart-contracts for peer-reviews might set a first step in this direction and our work seems promising. We hope that soon the value of peer review as 'academic capital' will be recognized by research funders and hiring committees.
+In our proposal we decoupled the peer-review process from the publishers giving it back to the scientific community and applying incetivization mechanisms. We foresee that the future will evolve towards community-driven peer-reviews: peer-reviews will be more and more independent from publishers, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
+\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process might require a new standard for peer reviews: for example some aspects might be taken over by AI assistants leaving to the reviewers the sole task of evaluating the content of a paper (such as \emph{AIRA} \cite{}). Building smart-contracts for peer-reviews might set a first step in this standardization. We hope that soon the value of peer review as 'academic capital' will be recognized by research funders and hiring committees.
 
 \section{Conclusion}
 In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We've shown how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
@@ -165,7 +165,7 @@ Source code, DOI: 10.5281/zenodo.3971044;
 \subsubsection{Declaration of Competing Interest}
 The authors declare no competing interests.
 
-\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi, Andy Tudhope, Mark Beylin, Evan C. Harris, Mitrasish Mukherjee and the external anonymous peer-reviewers.}
+\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi, Andy Tudhope, Mark Beylin, Evan C. Harris, Mitrasish Mukherjee and the external anonymous peer-reviewers for useful comments and revisions.}
 
 
 % ---- Bibliography ----
