Discussion: AIRA ref.

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -75,7 +75,7 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on E
 
 Here we describe the main features of Ants-Review.
 \paragraph{Incentivisation and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are a prize or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[4]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[5]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be represented by tokens, unit of values registered on a blockchain network, that represent the quantity and quality of a service within a network.
-\newline In the network of the scientific community reviewers provide a service and those who consume it (authors, journals)  should be able to contribute with tokens, an internal cryptocurrency that can be spent externally. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher.
+\newline In the network of the scientific community reviewers provide a service and those who consume it (authors, journals) should be able to contribute with tokens. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher.
 Thus, the system acts also as a reputation builder.
 \newline Moreover, to encourage commitment, reviewers who contribute consistently to multiple rounds of reviews on the same manuscript can have their tokens accrue interest over time (see 3.2).
 
@@ -153,7 +153,7 @@ A Decentralized Autonomous Organization (DAO) could be formed in the future to a
 \subsection{A new community-driven standard?}
 As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value (\emph{ibidem}).
 In our proposal we decoupled the peer-review process from the publishers giving it back to the scientific community and applying incetivization mechanisms. We foresee that the future will evolve towards community-driven peer-reviews: peer-reviews will be more and more independent from publishers, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
-\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process might require a new standard for peer-reviews: for example some aspects might be taken over by AI assistants(such as the \emph{Artificial Intelligence Review Assistant (AIRA)} \cite{} and ) leaving to the reviewers the sole task of evaluating the content of a paper . Building smart-contracts for peer-reviews might set a first step in this standardization. We hope that soon the value of peer review as public good will be recognized by research funders and hiring committees.
+\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process might require a new standard for peer-reviews: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)}\footnote[20]{\emph{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.} Posted on July 1, 2020 in \emph{Frontiers Announcements, Open Science and Peer Review}. \textsc{URL:} https://blog.frontiersin.org/2020/07/01/artificial-intelligence-peer-review-assistant-aira/.}) leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer-reviews might set a first step in this standardization. We hope that soon the value of peer review as public good will be recognized by research funders and hiring committees.
 
 \section{Conclusion}
 In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We've shown how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
